# unibuc

./: .gitattributes  README.md
second_year/bd/: connection_info.txt
second_year/bd/lab1/: 05.sql  07.sql  08.sql  10.sql  14.sql  16.sql  20.sql  22.sql
second_year/bd/lab2/: 02.sql  13.sql  18.sql  23.sql
second_year/bd/labs/lab-01/: 04.sql  06.sql  09.sql  11.sql  12.sql  13.sql  15.sql  17.sql  18.sql  19.sql  21.sql  23.sql  24.sql  25.sql
second_year/bd/labs/lab-02/: 01.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql  10.sql  11.sql  12.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  20.sql  21.sql  22.sql  23.sql  24.sql  25.sql  26.sql  27.sql
second_year/bd/labs/lab-03/: 01.sql  03.sql  04.sql
second_year/gc/project/: README.md  __main__.py  example.txt
second_year/gc/project/src/: draw.py  eps.py  main.py  point.py  triangle.py  triangulation.py
second_year/pao/: .gitignore
second_year/rc/: Dockerfile  README.md  docker-compose.yml
second_year/so/project/: CMakeLists.txt  README.md  syscalls.c
second_year/so/project/clients/: CMakeLists.txt  benchmark_test.cpp  big_test.cpp  interactive_shell.cpp  simple_lock_wait_unlock.cpp
second_year/so/project/common/: utils.cpp  utils.hpp
second_year/so/project/daemon/: CMakeLists.txt
second_year/so/project/daemon/src/: concurrent_queue.hpp  daemonize.cpp  daemonize.hpp  mutex_policy.cpp  mutex_policy.hpp  mutex_status.cpp  mutex_status.hpp  request.cpp  request.hpp  request_manager.cpp  request_manager.hpp
second_year/so/project/daemon/src/debug/: debug_shell.cpp  debug_shell.hpp  prettify.cpp  prettify.hpp
second_year/so/project/lib/: CMakeLists.txt
second_year/tw/project/: README.md
(+68 files in other folders)
